Prevent horizontal scrolling

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -16,15 +16,12 @@ body {
     font-family: 'Nunito', sans-serif;
     overflow-x: hidden;
     box-sizing: border-box;
+    max-width: 100%;
 }
 
 a {
     text-decoration: none;
     color: inherit;
-}
-
-.mobileFix {
-    overflow-x: hidden;
 }
 
 .heroSvg {
